<resources>
    <string name="app_name">阿尔法Go</string>
    <string name="fragment1">地图</string>
    <string name="fragment2">天气</string>
    <string name="fragment3">搜索</string>
    <string name="fragment4">设置</string>

    <string name="Null">+++</string>

    <!--天气-->
    <string name="Weather_title">天气情况</string>
    <string name="Weather_live_title">实时天气</string>
    <string name="wind">风力</string>
    <string name="humidity">湿度</string>
    <string name="weather">天气</string>
    <string name="temperature">温度</string>
    <string name="weather_forcast">天气预报</string>
    <string name="Date_forcast">日期</string>
    <string name="Weather_forcast">天气</string>
    <string name="Temperature_forcast">温度</string>

    <!--设置-->
    <string name="settings">设置</string>
    <string name="toast_change">该设置将在应用重启后生效</string>

    <string name="settings_map_group">地图</string>
    <string name="settings_show_compass">显示指南针</string>

    <string name="settings_weather_group">天气预报</string>
    <string name="settings_show_today">包含今天</string>

    <string name="gesture">手势</string>
    <string name="map_switch_gesture">启用地图界面的滑动翻页</string>
    <string name="map_gensture">启用地图手势操作</string>

    <string name="offline_map">离线地图</string>
    <string name="offline_map_manager">离线地图管理</string>
    <string name="offline_map_location">存储在SD卡中</string>
    <string name="offilne_map_location_summary">
        如果勾选，那么卸载软件后的地图数据将被保留，下次安装后不必重新下载离线地图</string>


    <!--搜索-->
    <string name="Hint">去哪里</string>

    <!--提示-->
    <string name="invalid_address">无效的地址</string>

    <!--地图-->
    <string name="marker_title">点我查询路线</string>

    <!--路线规划-->
    <string name="route_walk">步行</string>
    <string name="route_bus">公交</string>
    <string name="route_car">驾车</string>

    <string-array name="bus_mode">
        <item>时间短</item>
        <item>最省钱</item>
        <item>少步行</item>
    </string-array>

    <string-array name="car_mode">
        <item>时间短</item>
        <item>最省钱</item>
        <item>少拥堵</item>
    </string-array>

    <string-array name="walk_mode">
        <item>默认</item>
    </string-array>

    <!--详情界面-->
    <string name="detail_title_bus">公交路线详情</string>
    <string name="detail_title_car">驾车路线详情</string>
    <string name="detail_title_walk">步行路线详情</string>
    <string name="map_button">地图</string>
    <string name="detail_button">详情</string>

    <!--离线地图界面-->
    <string name="all_offline">所有城市</string>
    <string name="download_offline">下载管理</string>


</resources>
