<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/settings_map_group">
        <CheckBoxPreference
            android:key="show_compass"
            android:textColor="@color/White"
            android:title="@string/settings_show_compass"
            android:defaultValue="true"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_weather_group">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="show_today"
            android:textColor="@color/White"
            android:title="@string/settings_show_today" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/gesture">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="map_gensture"
            android:textColor="@color/White"
            android:title="@string/map_gensture"/>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="map_switch_gensture"
            android:textColor="@color/White"
            android:title="@string/map_switch_gesture"/>
    </PreferenceCategory>



</PreferenceScreen>