<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/weather_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Weather_title"
        android:textAlignment="center"
        android:textColor="@color/White"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/weather_live_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Weather_live_title"
        android:textColor="@color/White"
        android:textSize="24sp" />

    <GridLayout
        android:id="@+id/weather_live"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2">

        <TextView
            android:id="@+id/weather"
            android:layout_columnWeight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weather"
            android:textColor="@color/White"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/weather_value"
            android:layout_columnWeight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/wind"
            android:layout_columnWeight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wind"
            android:textColor="@color/White"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/wind_value"
            android:layout_columnWeight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/humidity"
            android:layout_columnWeight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/humidity"
            android:textColor="@color/White"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/humidity_value"
            android:layout_columnWeight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/temperature"
            android:layout_columnWeight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temperature"
            android:textColor="@color/White"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/temperature_value"
            android:layout_columnWeight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp" />

    </GridLayout>

    <TextView
        android:id="@+id/weather_forcast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/weather_forcast"
        android:textAlignment="center"
        android:textColor="@color/White"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/weather_forcast_value"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textAlignment="center"
        android:textColor="@color/White"
        android:textSize="24sp" />

</LinearLayout>