<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="45dp"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/map"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/background"
        android:clickable="true"
        android:gravity="center"
        android:onClick="selectMapFragment"
        android:text="@string/fragment1"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/search"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/background"
        android:clickable="true"
        android:gravity="center"
        android:onClick="selectSearchFragment"
        android:text="@string/fragment3"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/weather"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/background"
        android:clickable="true"
        android:gravity="center"
        android:onClick="selectWeatherFragment"
        android:text="@string/fragment2"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/setting"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/background"
        android:clickable="true"
        android:gravity="center"
        android:onClick="selectSettingFragment"
        android:text="@string/fragment4"
        android:textColor="@android:color/white" />

</LinearLayout>