<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="45dp"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/bus"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/background"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/route_bus"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/car"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/background"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/route_car"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/walk"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/background"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/route_walk"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/schedule"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/background"
        android:clickable="true"
        android:gravity="center"
        android:onClick="changeSchedule"
        android:textColor="@android:color/white" />

</LinearLayout>